Send PointerUp event when using stylus on Windows

After we changed to use ui::TouchEvent to represent stylus input instead
of ui::MouseEvent, we should not set its flag to left button or right
button when we press or release the pen on the tablet or any button on
the pen.


Bug: 850011
Change-Id: I2c2dc11e2cc625691aee11c14f28e632e0c15df3
Reviewed-on: https://chromium-review.googlesource.com/1099876
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Reviewed-by: Navid Zolghadr <nzolghadr@chromium.org>
Reviewed-by: Ella Ge <eirage@chromium.org>
Commit-Queue: Lan Wei <lanwei@chromium.org>
Cr-Commit-Position: refs/heads/master@{#568461}
Former-commit-id: fed11438f82f3bfa04702c06b6399fcfe5b60b2b